update weekend